--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=employee
 spring.datasource.url=jdbc:mysql://localhost:3306/ems
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 spring.jpa.properties.hibernate.dialet=org.hibernate.dialet.MySQLDialet
 spring.jpa.hibernate.ddl-auto=update
